--- a/theories/dune
+++ b/theories/dune
@@ -1,7 +1,7 @@
 (include_subdirs qualified)
 
 (rocq.theory
- (name PROJECT)
- (package PROJECT)
+ (name BASIC)
+ (package basic-rocq)
  (modules :standard)
  (theories Stdlib))
